--- a/src/ui/templates/menu.tpl.html
+++ b/src/ui/templates/menu.tpl.html
@@ -255,7 +255,7 @@
           viewBox="0 0 50 50"
           style="enable-background: new 0 0 50 50"
           xml:space="preserve"
-          class="on"
+          class="off"
         >
           <style type="text/css">
             #orbitsFILTER .st0 {
@@ -266,25 +266,34 @@
           <g>
             <path
               class="st0"
-              d="M25,11c-7.7,0-14,6.3-14,14c0,2.3,0.6,4.4,1.5,6.4c0.4-0.6,1-1,1.6-1.2c-0.7-1.6-1.2-3.3-1.2-5.1
-		c0-6.6,5.4-12,12-12s12,5.4,12,12s-5.4,12-12,12c-2.4,0-4.7-0.7-6.6-2c-0.3,0.6-0.8,1.1-1.5,1.4C19.2,38,22,39,25,39
-		c7.7,0,14-6.3,14-14S32.7,11,25,11z"
-            />
-            <circle class="st0" cx="15.4" cy="33.3" r="1" />
-          </g>
-          <g>
-            <rect x="19.3" y="20.9" class="st0" width="11.4" height="2" />
-            <rect x="21.4" y="24.5" class="st0" width="7.3" height="2" />
-            <rect x="23.6" y="28.1" class="st0" width="2.7" height="2" />
-          </g>
-          <g>
-            <path
-              class="st0"
               d="M25,3.8c-3.6,0-7,0.9-10,2.5c0.5,0.5,0.8,1.1,1.1,1.7c2.7-1.4,5.7-2.2,8.9-2.2c10.6,0,19.2,8.6,19.2,19.2
 		S35.6,44.2,25,44.2S5.8,35.6,5.8,25c0-4,1.2-7.8,3.4-10.8c-0.6-0.3-1.1-0.7-1.5-1.3C5.2,16.3,3.8,20.5,3.8,25
 		c0,11.7,9.5,21.2,21.2,21.2S46.2,36.7,46.2,25S36.7,3.8,25,3.8z"
             />
             <circle class="st0" cx="11.5" cy="9.8" r="1.5" />
+          </g>
+          <g>
+            <rect x="19" y="27" class="st0" width="12" height="2" />
+            <rect x="21.6" y="31.6" class="st0" width="7" height="2" />
+            <rect x="24" y="36.2" class="st0" width="2" height="2" />
+          </g>
+          <g>
+            <rect
+              x="24"
+              y="12.2"
+              transform="matrix(0.7071 -0.7071 0.7071 0.7071 -4.8701 22.7279)"
+              class="st0"
+              width="2"
+              height="10"
+            />
+            <rect
+              x="20"
+              y="16.2"
+              transform="matrix(0.7071 -0.7071 0.7071 0.7071 -4.8701 22.7279)"
+              class="st0"
+              width="10"
+              height="2"
+            />
           </g>
         </svg>
         <svg
@@ -299,7 +308,7 @@
           viewBox="0 0 50 50"
           style="enable-background: new 0 0 50 50"
           xml:space="preserve"
-          class="off"
+          class="on"
         >
           <style type="text/css">
             #orbitsFILTER .st0 {
@@ -310,25 +319,16 @@
           <g>
             <path
               class="st0"
-              d="M25,11c-7.7,0-14,6.3-14,14c0,2.3,0.6,4.4,1.5,6.4c0.4-0.6,1-1,1.6-1.2c-0.7-1.6-1.2-3.3-1.2-5.1
-		c0-6.6,5.4-12,12-12s12,5.4,12,12s-5.4,12-12,12c-2.4,0-4.7-0.7-6.6-2c-0.3,0.6-0.8,1.1-1.5,1.4C19.2,38,22,39,25,39
-		c7.7,0,14-6.3,14-14S32.7,11,25,11z"
-            />
-            <circle class="st0" cx="15.4" cy="33.3" r="1" />
-          </g>
-          <g>
-            <rect x="19.3" y="20.9" class="st0" width="11.4" height="2" />
-            <rect x="21.4" y="24.5" class="st0" width="7.3" height="2" />
-            <rect x="23.6" y="28.1" class="st0" width="2.7" height="2" />
-          </g>
-          <g>
-            <path
-              class="st0"
               d="M25,3.8c-3.6,0-7,0.9-10,2.5c0.5,0.5,0.8,1.1,1.1,1.7c2.7-1.4,5.7-2.2,8.9-2.2c10.6,0,19.2,8.6,19.2,19.2
 		S35.6,44.2,25,44.2S5.8,35.6,5.8,25c0-4,1.2-7.8,3.4-10.8c-0.6-0.3-1.1-0.7-1.5-1.3C5.2,16.3,3.8,20.5,3.8,25
 		c0,11.7,9.5,21.2,21.2,21.2S46.2,36.7,46.2,25S36.7,3.8,25,3.8z"
             />
             <circle class="st0" cx="11.5" cy="9.8" r="1.5" />
+          </g>
+          <g>
+            <rect x="19" y="19.4" class="st0" width="12" height="2" />
+            <rect x="21.6" y="24" class="st0" width="7" height="2" />
+            <rect x="24" y="28.6" class="st0" width="2" height="2" />
           </g>
         </svg>
       </button>
