--- a/src/ui/templates/menu.tpl.html
+++ b/src/ui/templates/menu.tpl.html
@@ -1,6 +1,6 @@
 <div class="menu">
   <ul class="menu__buttons">
-    <li>
+    <li class="fullscreen-item">
       <button class="menu_btn fullscreen" data-menu-action="toggle-fullscreen">
         <svg
           version="1.1"
@@ -54,7 +54,7 @@
         </svg>
       </button>
     </li>
-    <li>
+    <li class="marker-item">
       <button class="menu_btn marker" data-menu-action="toggle-marker">
         <svg
           version="1.1"
@@ -150,7 +150,7 @@
         </svg>
       </button>
     </li>
-    <li>
+    <li class="orbits-item">
       <button class="menu_btn orbits" data-menu-action="toggle-orbits">
         <svg
           version="1.1"
@@ -241,7 +241,7 @@
         </svg>
       </button>
     </li>
-    <li>
+    <li class="declutter-item">
       <button class="menu_btn declutter" data-menu-action="toggle-declutter">
         <svg
           version="1.1"
@@ -333,7 +333,7 @@
         </svg>
       </button>
     </li>
-    <li>
+    <li class="audio-item">
       <div class="wrapper">
         <div class="volume">
           <input
@@ -419,7 +419,7 @@
       </div>
     </li>
     <li></li>
-    <li>
+    <li class="zoom-item">
       <button class="menu_btn" data-menu-action="zoom-in">
         <svg
           version="1.1"
@@ -455,7 +455,7 @@
         </svg>
       </button>
     </li>
-    <li>
+    <li class="zoom-item">
       <button class="menu_btn" data-menu-action="zoom-out">
         <svg
           version="1.1"
